# metar-datasets

./: .bumpversion.cfg  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
data/processed/: README.md
data/raw/: Makefile  metar.txt  regex.txt
data/raw/mrlb/: 2005.txt  2005.txt.dvc  2006.txt  2006.txt.dvc  2007.txt  2007.txt.dvc  2008.txt  2008.txt.dvc  2009.txt  2009.txt.dvc  2010.txt  2010.txt.dvc  2011.txt  2011.txt.dvc  2012.txt  2012.txt.dvc  2013.txt  2013.txt.dvc  2014.txt  2014.txt.dvc  2015.txt  2015.txt.dvc  2016.txt  2016.txt.dvc  2017.txt  2017.txt.dvc  2018.txt  2018.txt.dvc  2019.txt  2019.txt.dvc  2020.txt  2020.txt.dvc  2021.txt  2021.txt.dvc  2022.txt  2022.txt.dvc  2023.txt  2023.txt.dvc  README.md
data/raw/mrlm/: 2005.txt  2005.txt.dvc  2006.txt  2006.txt.dvc  2007.txt  2007.txt.dvc  2008.txt  2008.txt.dvc  2009.txt  2009.txt.dvc  2010.txt  2010.txt.dvc  2011.txt  2011.txt.dvc  2012.txt  2012.txt.dvc  2013.txt  2013.txt.dvc  2014.txt  2014.txt.dvc  2015.txt  2015.txt.dvc  2016.txt  2016.txt.dvc  2017.txt  2017.txt.dvc  2018.txt  2018.txt.dvc  2019.txt  2019.txt.dvc  2020.txt  2020.txt.dvc  2021.txt  2021.txt.dvc  2022.txt  2022.txt.dvc  2023.txt  2023.txt.dvc  README.md
data/raw/mroc/: .gitignore  2005.txt  2005.txt.dvc  2006.txt  2006.txt.dvc  2007.txt  2007.txt.dvc  2008.txt  2008.txt.dvc  2009.txt  2009.txt.dvc  (+29 more)
metar_datasets/data/: .gitignore  Makefile  mroc.dvc  mrpv.dvc
src/: __main__.py  core.py  generar_csv.py
src/data/: README.md
src/visualization/: README.md
(+42 files in other folders)
